--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tabs": "^6.0.2",
     "react-transition-group": "^4.4.5",
     "react-zoom-pan-pinch": "^2.2.1",
+    "typewriter-effect": "^2.18.2",
     "universal-cookie": "^4.0.4",
     "use-query-params": "^1.2.3",
     "vconsole": "^3.3.4",
